--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <div class="wrapper">
     <div class="header-card">
-      <h1>Realisasi Fisik & Keuangan 9 OPD Mitra <br>per Juni 2025</h1>
+      <h1>Realisasi Fisik & Keuangan 9 OPD Mitra per Juni 2025</h1>
     </div>
 
 <style>
